--- a/src/App.scss
+++ b/src/App.scss
@@ -51,6 +51,7 @@ main {
   section {
     padding: 5rem 0;
     height: 100vh;
+    // min-height: 900px;
   }
   .greeting {
     position: relative;
