--- a/src/App.scss
+++ b/src/App.scss
@@ -80,5 +80,12 @@ main {
         line-height: 1.7;
       }
     }
+    .wrapper {
+      display: flex;
+      .contacts {
+      }
+      .github-repos {
+      }
+    }
   }
 }
