--- a/src/App.scss
+++ b/src/App.scss
@@ -72,6 +72,8 @@ main {
     .information {
       display: flex;
       justify-content: center;
+      align-items: center;
+      margin-bottom: 10px;
       img {
         height: 250px;
         margin-right: 2%;
@@ -116,11 +118,43 @@ main {
     }
   }
   .send-email {
-    position: relative;
+    // position: relative;
     h2 {
       text-align: center;
       color: $middle-blue;
     }
+
+    .overlay {
+      position: fixed;
+      top: -100%;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+
+      .alert {
+        color: $light-blue;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: all 0.5s;
+        background-color: $middle-blue;
+      }
+
+      .active {
+        bottom: -16%;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      .not-active {
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+
     form {
       display: flex;
       flex-direction: column;
@@ -153,6 +187,17 @@ main {
         text-transform: uppercase;
         width: 12rem;
       }
+    }
+  }
+}
+
+footer {
+  background-color: $dark-blue;
+  padding: 10px 0;
+  div {
+    & > * {
+      color: $light-blue;
+      margin-bottom: 0;
     }
   }
 }
