--- a/src/App.scss
+++ b/src/App.scss
@@ -49,7 +49,7 @@ li {
 
 main {
   section {
-    padding: 5rem 0;
+    padding-top: 5rem;
     // height: 1080px;
     // min-height: 900px;
   }
@@ -150,7 +150,33 @@ main {
     }
   }
 
+  .projects {
+    .projects-wrapper {
+      color: $light-blue;
+      background-color: $dark-blue;
+      display: flex;
+      justify-content: space-evenly;
+      .projects-list {
+        column-count: 3;
+        padding: 40px;
+        li {
+          &:nth-child(1),
+          &:nth-child(3),
+          &:nth-child(5) {
+            margin-bottom: 50px;
+          }
+          div {
+            img {
+              width: 300px;
+            }
+          }
+        }
+      }
+    }
+  }
+
   .send-email {
+    padding-bottom: 3.5rem;
     .overlay {
       position: fixed;
       top: -100%;
