--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@ li {
 
 .main-header {
   background-color: $dark-blue;
+  box-shadow: 0 0 5px #000;
   position: fixed;
   width: 100%;
   top: 0;
@@ -248,6 +249,12 @@ footer {
     & > * {
       color: $light-blue;
       margin-bottom: 0;
+      text-align: center;
+      font-size: 20px;
+
+      span {
+        font-size: 30px;
+      }
     }
   }
 }
