--- a/src/App.scss
+++ b/src/App.scss
@@ -149,13 +149,14 @@ main {
 
   .projects {
     .projects-wrapper {
+      padding: 10px;
       color: $light-blue;
       background-color: $dark-blue;
-      display: flex;
-      justify-content: space-evenly;
+      height: 590px;
       .projects-list {
         column-count: 3;
         padding: 40px;
+        margin-bottom: 0;
         li {
           &:nth-child(1),
           &:nth-child(3),
@@ -169,11 +170,79 @@ main {
           }
         }
       }
+      .project-detail {
+        width: 100%;
+        height: 75%;
+        color: $middle-blue;
+
+        .back-to-list {
+          font-size: 40px;
+          color: $middle-blue;
+        }
+
+        h2 {
+          text-align: center;
+          text-transform: uppercase;
+          font-weight: bold;
+          letter-spacing: 5px;
+          margin: 0 auto;
+          margin-top: 10px;
+          font-size: 40px;
+          padding-bottom: 30px;
+          border-bottom: 4px solid $middle-blue;
+          display: block;
+          width: 92.5%;
+        }
+        .project-detail-wrapper {
+          padding: 0 40px;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          img {
+            width: 500px;
+          }
+          img,
+          .description {
+            float: left;
+            width: 50%;
+            position: relative;
+          }
+          .description {
+            letter-spacing: 2px;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .descr-text {
+              font-size: 24px;
+            }
+            .tech {
+              font-size: 18px;
+            }
+            .links {
+              position: absolute;
+              bottom: 0;
+              right: 0;
+
+              & > * {
+                font-size: 30px;
+                color: $red-color;
+                &:hover {
+                  color: $middle-blue;
+                }
+                &:first-child {
+                  margin-right: 5px;
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 
   .send-email {
-    padding-bottom: 3.5rem;
+    padding-bottom: 7rem;
     .overlay {
       position: fixed;
       top: -100%;
