--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,79 @@ li {
     text-decoration: underline;
   }
 
+  .menu-wrapper {
+    display: none;
+
+    .toggler {
+      width: 30px;
+      height: 40px;
+      cursor: pointer;
+      position: relative;
+
+      .line {
+        background-color: $middle-blue;
+        content: '';
+        width: 100%;
+        height: 3px;
+        display: block;
+        position: absolute;
+      }
+
+      .first-line {
+        top: 30%;
+      }
+      .second-line {
+        top: 50%;
+      }
+      .third-line {
+        top: 70%;
+      }
+    }
+  }
+
+  .navigation-small {
+    position: fixed;
+    left: 0;
+    width: 100%;
+    margin-top: 8px;
+    height: 100vh;
+    overflow-y: hidden;
+    transition: transform 0.25s ease-out, visibility 0.25s;
+
+    .list-wrapper {
+      height: 100vh;
+      background-color: $light-blue;
+      position: relative;
+
+      ul {
+        padding: 30px 10px;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 90%;
+        transform: translate(-50%, -50%);
+        li {
+          color: $dark-blue;
+          text-transform: uppercase;
+          font-size: 25px;
+          text-align: center;
+          border-bottom: 1px solid $white-color;
+          width: 100%;
+          margin: 0;
+          padding-bottom: 30px;
+          &:not(:last-child) {
+            margin-bottom: 30px;
+          }
+          .active {
+            color: inherit;
+          }
+        }
+      }
+    }
+  }
+
   .navigation {
     ul {
       display: flex;
@@ -159,6 +232,8 @@ main {
       color: $light-blue;
       background-color: $dark-blue;
       .projects-list {
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
         column-count: 3;
         padding: 40px;
         margin-bottom: 0;
@@ -175,69 +250,75 @@ main {
           }
         }
       }
-      .project-detail {
-        width: 100%;
-        height: 75%;
+    }
+    .project-detail {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      color: $middle-blue;
+      background-color: $dark-blue;
+      padding: 10px;
+      z-index: 10;
+
+      .back-to-list {
+        font-size: 40px;
         color: $middle-blue;
+      }
 
-        .back-to-list {
-          font-size: 40px;
-          color: $middle-blue;
+      h2 {
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+        letter-spacing: 5px;
+        margin: 0 auto;
+        margin-top: 10px;
+        font-size: 40px;
+        padding-bottom: 30px;
+        border-bottom: 4px solid $middle-blue;
+        display: block;
+        width: 92.5%;
+      }
+      .project-detail-wrapper {
+        padding: 0 40px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        img {
+          width: 500px;
         }
-
-        h2 {
-          text-align: center;
-          text-transform: uppercase;
-          font-weight: bold;
-          letter-spacing: 5px;
-          margin: 0 auto;
-          margin-top: 10px;
-          font-size: 40px;
-          padding-bottom: 30px;
-          border-bottom: 4px solid $middle-blue;
-          display: block;
-          width: 92.5%;
+        img,
+        .description {
+          float: left;
+          width: 50%;
+          position: relative;
         }
-        .project-detail-wrapper {
-          padding: 0 40px;
+        .description {
+          letter-spacing: 2px;
           height: 100%;
           display: flex;
-          align-items: center;
-          img {
-            width: 500px;
+          flex-direction: column;
+          justify-content: center;
+          .descr-text {
+            font-size: 24px;
           }
-          img,
-          .description {
-            float: left;
-            width: 50%;
-            position: relative;
+          .tech {
+            font-size: 18px;
           }
-          .description {
-            letter-spacing: 2px;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            .descr-text {
-              font-size: 24px;
-            }
-            .tech {
-              font-size: 18px;
-            }
-            .links {
-              position: absolute;
-              bottom: 0;
-              right: 0;
+          .links {
+            position: absolute;
+            bottom: 0;
+            right: 0;
 
-              & > * {
-                font-size: 30px;
-                color: $red-color;
-                &:hover {
-                  color: $middle-blue;
-                }
-                &:first-child {
-                  margin-right: 5px;
-                }
+            & > * {
+              font-size: 30px;
+              color: $red-color;
+              &:hover {
+                color: $middle-blue;
+              }
+              &:first-child {
+                margin-right: 5px;
               }
             }
           }
