--- a/src/MediaQueries.scss
+++ b/src/MediaQueries.scss
@@ -289,3 +289,127 @@
     }
   }
 }
+
+@media all and(orientation: portrait) and(max-width: 640px) {
+  main {
+    .projects {
+      .project-detail {
+        h2 {
+          font-size: 25px;
+          border-bottom: 2px solid $middle-blue;
+        }
+        img {
+          width: 70% !important;
+          margin-bottom: 20px !important;
+        }
+        .description {
+          letter-spacing: 2px;
+          height: 100%;
+
+          .descr-text {
+            font-size: 20px !important;
+          }
+          .tech {
+            font-size: 15px !important;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media all and(orientation: portrait) and(max-width: 640px) and(max-height: 620px) {
+  main {
+    .projects {
+      .project-detail {
+        img {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media all and(orientation: landscape) and(max-width: 1200px) {
+  main {
+    .projects {
+      .project-detail {
+        h2 {
+          font-size: 25px;
+          border-bottom: 2px solid $middle-blue;
+          padding-bottom: 0;
+        }
+        .project-detail-wrapper {
+          display: block;
+          content: ' ';
+          clear: both;
+          padding: 0 10px;
+          img {
+            float: left;
+            width: 40%;
+            margin-right: 3px;
+          }
+          .description {
+            float: right;
+            width: 58%;
+            .descr-text {
+              font-size: 20px !important;
+            }
+            .tech {
+              font-size: 15px !important;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media all and(orientation: landscape) and(max-height: 378px) and(max-width: 576px) {
+  main {
+    .projects {
+      .project-detail {
+        img {
+          display: none;
+        }
+        .description {
+          float: left !important;
+          width: 100% !important;
+        }
+      }
+    }
+  }
+}
+
+@media all and(orientation: landscape) and(max-width: 767px) and(max-height: 600px) {
+  .main-header {
+    .menu-wrapper {
+      .navigation-small {
+        .list-wrapper {
+          ul {
+            li {
+              font-size: 20px;
+              padding-bottom: 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media all and(orientation: landscape) and(max-width: 767px) and(max-height: 450px) {
+  .main-header {
+    .menu-wrapper {
+      .navigation-small {
+        .list-wrapper {
+          ul {
+            li {
+              font-size: 18px;
+              margin-bottom: 10px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
